syntax = "proto3";

package testproto;


message LocationHeader {
    string city = 1;
}

message CalculateStrLenRequest {
    string str = 1;
}

message CalculateStrLenResponse{
    int32 len = 1;
}

message AddRequest{
    int32 a = 1;
    int32 b = 2;
}

message AddResponse{
    int32 sum = 1;
}

message AccountHeader {
    string account = 1;
    string password = 2;
}

// 入金请求，需要附带鉴权头部AccountHeader
message DepositRequest{
    double money = 1;
}

// 入金响应
message DepositResponse{
    int64 timestamp = 1;
}


message ReportRequest{

}

message DeleteUserRequest{
}
