syntax = "proto3";

package testpb;

message EchoRequest {
    string str = 1;
}


message EchoResponse {
    string str = 1;
}


message AddRequest {
    int64 a = 1;
    int64 b = 2;
}

message AddResponse {
    int64 sum = 1;
}